--- a/initiativeBase.yml
+++ b/initiativeBase.yml
@@ -24,10 +24,10 @@
 - [3, 0, "Whiskey", "Dead", 0, "mt"]
 - [3, 0, "X-ray", "Dead", 0, "mt"]
 - [3, 0, "Yankee", "Dead", 0, "mt"]
-- [3, 1, "Faeyra", "Dead", 0, "mt"]
+- [3, 1, "Faeyra", "Alive", 0, "mt"]
 - [3, 5, "Oel", "Alive", 0, "mt"]
 - [3, 1, "Gryida", "Alive", 0, "mt"]
-- [3, 1, "Kylar", "Alive", 0, "mt"]
+- [3, 2, "Kylar", "Alive", 0, "mt"]
 - [3, 1, "Pyra", "Alive", 0, "mt"]
 - [3, 1, "Gorin", "Alive", 0, "mt"]
 - [0,-99,"End of Round", "Alive", 99, "mt"]
