--- a/initiativeBase.yml
+++ b/initiativeBase.yml
@@ -1,29 +1,30 @@
 ---
-- [3, 0, "Alfredo", "Alive", 0, "mt"]
-- [3, 0, "Bosco", "Alive", 0, "mt"]
-- [3, 0, "Chuckie", "Alive", 0, "mt"]
-- [3, 0, "Dufus", "Alive", 0, "mt"]
-- [3, 0, "Elton", "Alive", 0, "mt"]
-- [3, 0, "Fargo", "Dead", 0, "mt"]
-- [3, 0, "Gosh", "Dead", 0, "mt"]
-- [3, 0, "Heck", "Dead", 0, "mt"]
-- [3, 0, "Ivan", "Dead", 0, "mt"]
-- [3, 0, "JubJub", "Dead", 0, "mt"]
-- [3, 0, "Kilo", "Dead", 0, "mt"]
-- [3, 0, "Lima", "Dead", 0, "mt"]
-- [3, 0, "Mike", "Dead", 0, "mt"]
-- [3, 0, "November", "Dead", 0, "mt"]
-- [3, 0, "Oscar", "Dead", 0, "mt"]
-- [3, 0, "Papa", "Dead", 0, "mt"]
-- [3, 0, "Quebec", "Dead", 0, "mt"]
-- [3, 0, "Romeo", "Dead", 0, "mt"]
-- [3, 0, "Sierra", "Dead", 0, "mt"]
-- [3, 0, "Tango", "Dead", 0, "mt"]
-- [3, 0, "Uniform", "Dead", 0, "mt"]
-- [3, 0, "Victor", "Dead", 0, "mt"]
-- [3, 0, "Whiskey", "Dead", 0, "mt"]
-- [3, 0, "X-ray", "Dead", 0, "mt"]
-- [3, 0, "Yankee", "Dead", 0, "mt"]
+- [3, 0, "A.BadGuy", "Alive", 0, "mt"]
+- [3, 0, "B.BadGuy", "Alive", 0, "mt"]
+- [3, 0, "C.BadGuy", "Alive", 0, "mt"]
+- [3, 0, "D.BadGuy", "Alive", 0, "mt"]
+- [3, 0, "E.BadGuy", "Alive", 0, "mt"]
+- [3, 0, "F.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "G.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "H.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "I.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "J.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "K.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "L.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "M.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "N.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "O.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "P.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "Q.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "R.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "S.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "T.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "U.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "V.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "W.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "X.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "Y.BadGuy", "Dead", 0, "mt"]
+- [3, 0, "Z.BadGuy", "Alive", 0, "mt"]
 - [3, 1, "Faeyra", "Alive", 0, "mt"]
 - [3, 5, "Oel", "Alive", 0, "mt"]
 - [3, 1, "Gryida", "Alive", 0, "mt"]
