revised initiativeBase.yml
reverted to only using capital letters in position 2

--- a/initiativeBase.yml
+++ b/initiativeBase.yml
@@ -1,30 +1,30 @@
 ---
-- [3, 0, "A.BadGuy", "Alive", 0, "mt"]
-- [3, 0, "B.BadGuy", "Alive", 0, "mt"]
-- [3, 0, "C.BadGuy", "Alive", 0, "mt"]
-- [3, 0, "D.BadGuy", "Alive", 0, "mt"]
-- [3, 0, "E.BadGuy", "Alive", 0, "mt"]
-- [3, 0, "F.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "G.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "H.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "I.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "J.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "K.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "L.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "M.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "N.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "O.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "P.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "Q.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "R.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "S.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "T.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "U.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "V.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "W.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "X.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "Y.BadGuy", "Dead", 0, "mt"]
-- [3, 0, "Z.BadGuy", "Alive", 0, "mt"]
+- [3, 0, "A", "Alive", 0, "mt"]
+- [3, 0, "B", "Alive", 0, "mt"]
+- [3, 0, "C", "Alive", 0, "mt"]
+- [3, 0, "D", "Alive", 0, "mt"]
+- [3, 0, "E", "Alive", 0, "mt"]
+- [3, 0, "F", "Dead", 0, "mt"]
+- [3, 0, "G", "Dead", 0, "mt"]
+- [3, 0, "H", "Dead", 0, "mt"]
+- [3, 0, "I", "Dead", 0, "mt"]
+- [3, 0, "J", "Dead", 0, "mt"]
+- [3, 0, "K", "Dead", 0, "mt"]
+- [3, 0, "L", "Dead", 0, "mt"]
+- [3, 0, "M", "Dead", 0, "mt"]
+- [3, 0, "N", "Dead", 0, "mt"]
+- [3, 0, "O", "Dead", 0, "mt"]
+- [3, 0, "P", "Dead", 0, "mt"]
+- [3, 0, "Q", "Dead", 0, "mt"]
+- [3, 0, "R", "Dead", 0, "mt"]
+- [3, 0, "S", "Dead", 0, "mt"]
+- [3, 0, "T", "Dead", 0, "mt"]
+- [3, 0, "U", "Dead", 0, "mt"]
+- [3, 0, "V", "Dead", 0, "mt"]
+- [3, 0, "W", "Dead", 0, "mt"]
+- [3, 0, "X", "Dead", 0, "mt"]
+- [3, 0, "Y", "Dead", 0, "mt"]
+- [3, 0, "Z", "Alive", 0, "mt"]
 - [3, 1, "Faeyra", "Alive", 0, "mt"]
 - [3, 5, "Oel", "Alive", 0, "mt"]
 - [3, 1, "Gryida", "Alive", 0, "mt"]
