revised all the names
added -dufus

--- a/nameBase.yml
+++ b/nameBase.yml
@@ -1,27 +1,27 @@
 ---
-- ["Alplha"]
-- ["Bravo"]
-- ["Charlie"]
-- ["Delta"]
-- ["Echo"]
-- ["Foxtrot"]
-- ["Golf"]
-- ["Hotel"]
-- ["India"]
-- ["Juliet"]
-- ["Kilo"]
-- ["Lima"]
-- ["Mike"]
-- ["November"]
-- ["Oscar"]
-- ["Papa"]
-- ["Quebec"]
-- ["Romeo"]
-- ["Sierra"]
-- ["Tango"]
-- ["Uniform"]
-- ["Victor"]
-- ["Whiskey"]
-- ["Xray"]
-- ["Yankee"]
-- ["Zulu"]
+- ["Alphadufus"]
+- ["Bravodufus"]
+- ["Charliedufus"]
+- ["Deltadufus"]
+- ["Echodufus"]
+- ["Foxtrotdufus"]
+- ["Golfdufus"]
+- ["Hoteldufus"]
+- ["Indiadufus"]
+- ["Julietdufus"]
+- ["Kilodufus"]
+- ["Limadufus"]
+- ["Mikedufus"]
+- ["Novemberdufus"]
+- ["Oscardufus"]
+- ["Papadufus"]
+- ["Quebecdufus"]
+- ["Romeodufus"]
+- ["Sierradufus"]
+- ["Tangodufus"]
+- ["Uniformdufus"]
+- ["Victordufus"]
+- ["Whiskeydufus"]
+- ["Xraydufus"]
+- ["Yankeedufus"]
+- ["Zuludufus"]
