--- a/initiativeBase.yml
+++ b/initiativeBase.yml
@@ -24,7 +24,7 @@
 - [3, 0, "W", "Dead", 0, "mt"]
 - [3, 0, "X", "Dead", 0, "mt"]
 - [3, 0, "Y", "Dead", 0, "mt"]
-- [3, 0, "Z", "Alive", 0, "mt"]
+- [3, 0, "Z", "Dead", 0, "mt"]
 - [3, 3, "Faeyra", "Alive", 0, "mt"]
 - [3, 5, "Oel", "Alive", 0, "mt"]
 - [3, 1, "Gryida", "Alive", 0, "mt"]
