--- a/inititiativeBase.yml
+++ b/inititiativeBase.yml
@@ -25,7 +25,7 @@
 - [3, 0, "X", "Dead", 0, "mt"]
 - [3, 0, "Y", "Dead", 0, "mt"]
 - [3, 0, "Z", "Dead", 0, "mt"]
-- [3, 3, "Faeyra", "Dead", 0, "mt"]
+- [3, 3, "Faeyra", "Alive", 0, "mt"]
 - [3, 5, "Oel", "Dead", 0, "mt"]
 - [3, 1, "Gryida", "Alive", 0, "mt"]
 - [3, 1, "Kylar", "Alive", 0, "mt"]
