--- a/initiativeBase.yml
+++ b/initiativeBase.yml
@@ -26,9 +26,9 @@
 - [3, 0, "Y", "Dead", 0, "mt"]
 - [3, 0, "Z", "Dead", 0, "mt"]
 - [3, 3, "Faeyra", "Alive", 0, "mt"]
-- [3, 5, "Oel", "Alive", 0, "mt"]
+- [3, 5, "Oel", "Dead", 0, "mt"]
 - [3, 1, "Gryida", "Alive", 0, "mt"]
 - [3, 1, "Kylar", "Alive", 0, "mt"]
-- [3, 1, "Pyra", "Alive", 0, "mt"]
-- [3, 0, "Gorin", "Alive", 0, "mt"]
+- [3, 3, "Lisbet", "Alive", 0, "mt"]
+- [3, 9, "Squeeky", "Alive", 0, "mt"]
 - [0,-99,"End of Round", "Alive", 99, "mt"]
