--- a/initiativeBase.yml
+++ b/initiativeBase.yml
@@ -1,9 +1,9 @@
 ---
 - [3, 0, "A", "Alive", 0, "mt"]
-- [3, 0, "B", "Alive", 0, "mt"]
-- [3, 0, "C", "Alive", 0, "mt"]
-- [3, 0, "D", "Alive", 0, "mt"]
-- [3, 0, "E", "Alive", 0, "mt"]
+- [3, 0, "B", "Dead", 0, "mt"]
+- [3, 0, "C", "Dead", 0, "mt"]
+- [3, 0, "D", "Dead", 0, "mt"]
+- [3, 0, "E", "Dead", 0, "mt"]
 - [3, 0, "F", "Dead", 0, "mt"]
 - [3, 0, "G", "Dead", 0, "mt"]
 - [3, 0, "H", "Dead", 0, "mt"]
@@ -24,11 +24,12 @@
 - [3, 0, "W", "Dead", 0, "mt"]
 - [3, 0, "X", "Dead", 0, "mt"]
 - [3, 0, "Y", "Dead", 0, "mt"]
-- [3, 0, "Z", "Alive", 0, "mt"]
-- [3, 4, "Faeyra", "Alive", 0, "mt"]
-- [3, 5, "Oel", "Alive", 0, "mt"]
-- [3, 1, "Gryida", "Alive", 0, "mt"]
-- [3, 2, "Kylar", "Alive", 0, "mt"]
-- [3, 1, "Pyra", "Alive", 0, "mt"]
-- [3, 0, "Gorin", "Alive", 0, "mt"]
+- [3, 0, "Z", "Dead", 0, "mt"]
+- [3, 2, "Kelgrath", "Alive", 0, "mt"]
+- [3, 5, "Pearl", "Alive", 0, "mt"]
+- [3, 1, "Ugragoth", "Alive", 0, "mt"]
+- [3, 0, "Faffy", "Alive", 0, "mt"]
+- [3, 1, "Ashmar", "Alive", 0, "mt"]
+- [3, 0, "Elizira", "Alive", 0, "mt"]
+- [3, 0, "Nixie", "Alive", 0, "mt"]
 - [0,-99,"End of Round", "Alive", 99, "mt"]
