attempt to load fresh revised file ...
of base initiative values

--- a/initiativeBase.yml
+++ b/initiativeBase.yml
@@ -1,33 +1,33 @@
 ---
-- [3,1,"AA","Alive",0,"mt"]
-- [3,0,"BB","Dead",0,"mt"]
-- [3,0,"CC","Dead",0,"mt"]
-- [3,0,"DD","Dead",0,"mt"]
-- [3,0,"EE","Dead",0,"mt"]
-- [3,0,"FF","Dead",0,"mt"]
-- [3,0,"GG","Dead",0,"mt"]
-- [3,0,"HH","Dead",0,"mt"]
-- [3,0,"II","Dead",0,"mt"]
-- [3,0,"JJ","Dead",0,"mt"]
-- [3,0,"KK","Dead",0,"mt"]
-- [3,0,"LL","Dead",0,"mt"]
-- [3,0,"MM","Dead",0,"mt"]
-- [3,0,"NN","Dead",0,"mt"]
-- [3,0,"OO","Dead",0,"mt"]
-- [3,0,"PP","Dead",0,"mt"]
-- [3,0,"QQ","Dead",0,"mt"]
-- [3,0,"RR","Dead",0,"mt"]
-- [3,0,"SS","Dead",0,"mt"]
-- [3,0,"TT","Dead",0,"mt"]
-- [3,0,"UU","Dead",0,"mt"]
-- [3,0,"VV","Dead",0,"mt"]
-- [3,0,"WW","Dead",0,"mt"]
-- [3,0,"XX","Dead",0,"mt"]
-- [3,0,"YY","Dead",0,"mt"]
-- [3,0,"ZZ","Dead",0,"mt"]
-- [3,2,"KKylar","Alive",0,"mt"]
-- [3,5,"OOel","Alive",0,"mt"]
-- [3,1,"GGryida","Alive",0,"mt"]
-- [3,1,"PPyra","Alive",0,"mt"]
-- [3,4,"FFaeyra","Alive",0,"mt"]
+- [3,1,"A","Alive",0,"mt"]
+- [3,0,"B","Dead",0,"mt"]
+- [3,0,"C","Dead",0,"mt"]
+- [3,0,"D","Dead",0,"mt"]
+- [3,0,"E","Dead",0,"mt"]
+- [3,0,"F","Dead",0,"mt"]
+- [3,0,"G","Dead",0,"mt"]
+- [3,0,"H","Dead",0,"mt"]
+- [3,0,"I","Dead",0,"mt"]
+- [3,0,"J","Dead",0,"mt"]
+- [3,0,"K","Dead",0,"mt"]
+- [3,0,"L","Dead",0,"mt"]
+- [3,0,"M","Dead",0,"mt"]
+- [3,0,"N","Dead",0,"mt"]
+- [3,0,"O","Dead",0,"mt"]
+- [3,0,"P","Dead",0,"mt"]
+- [3,0,"Q","Dead",0,"mt"]
+- [3,0,"R","Dead",0,"mt"]
+- [3,0,"S","Dead",0,"mt"]
+- [3,0,"T","Dead",0,"mt"]
+- [3,0,"U","Dead",0,"mt"]
+- [3,0,"V","Dead",0,"mt"]
+- [3,0,"W","Dead",0,"mt"]
+- [3,0,"X","Dead",0,"mt"]
+- [3,0,"Y","Dead",0,"mt"]
+- [3,0,"Z","Dead",0,"mt"]
+- [3,2,"Kylar","Alive",0,"mt"]
+- [3,5,"Oel","Alive",0,"mt"]
+- [3,1,"Gryida","Alive",0,"mt"]
+- [3,1,"Pyra","Alive",0,"mt"]
+- [3,4,"Faeyra","Alive",0,"mt"]
 - [0,-99,"EEnd of Round","Alive",99,"mt"]
