revised last line End of Initiative

--- a/initiativeBase.yml
+++ b/initiativeBase.yml
@@ -30,4 +30,4 @@
 - [3,1,"Gryida","Alive",0,"mt"]
 - [3,1,"Pyra","Alive",0,"mt"]
 - [3,4,"Faeyra","Alive",0,"mt"]
-- [0,-99,"EEnd of Round","Alive",99,"mt"]
+- [0,-99,"End of Round","Alive",99,"mt"]
