--- a/initiativeBase.yml
+++ b/initiativeBase.yml
@@ -25,9 +25,10 @@
 - [3,0,"X","Dead",0,"mt"]
 - [3,0,"Y","Dead",0,"mt"]
 - [3,0,"Z","Dead",0,"mt"]
-- [3,2,"Kylar","Alive",0,"mt"]
-- [3,5,"Oel","Alive",0,"mt"]
-- [3,1,"Gryida","Alive",0,"mt"]
-- [3,1,"Pyra","Alive",0,"mt"]
-- [3,4,"Faeyra","Alive",0,"mt"]
+- [9,1,"Udragoth","Alive",0,"mt"]
+- [3,0,"Nixie","Alive",0,"mt"]
+- [3,0,"Elizira","Alive",0,"mt"]
+- [3,5,"Pearl","Alive",0,"mt"]
+- [3,2,"Djora","Alive",0,"mt"]
+- [3,1,"Ashmar","Alive",0,"mt"]
 - [0,-99,"End of Round","Alive",99,"mt"]
