update of characters
added Sai +3
and Qiralei +2

--- a/initiativeBase.yml
+++ b/initiativeBase.yml
@@ -27,8 +27,8 @@
 - [3,0,"Z","Dead",0,"mt"]
 - [9,1,"Udragoth","Alive",0,"mt"]
 - [9,0,"Nixie","Alive",0,"mt"]
-- [3,0,"Elizira","Alive",0,"mt"]
+- [3,2,"Qiralei","Alive",0,"mt"]
 - [3,5,"Pearl","Alive",0,"mt"]
 - [3,2,"Djora","Alive",0,"mt"]
-- [3,1,"Ashmar","Alive",0,"mt"]
+- [3,3,"Sai","Alive",0,"mt"]
 - [0,-99,"End of Round","Alive",99,"mt"]
