--- a/initiativeBase.yml
+++ b/initiativeBase.yml
@@ -28,7 +28,7 @@
 - [9,1,"Udragoth","Alive",0,"mt"]
 - [9,0,"Nixie","Alive",0,"mt"]
 - [3,2,"Qiralei","Alive",0,"mt"]
-- [3,5,"Pearl","Dead",0,"mt"]
+- [3,3,"Kelgrath","Alive",0,"mt"]
 - [3,2,"Djora","Alive",0,"mt"]
 - [3,3,"Sai","Alive",0,"mt"]
 - [0,-99,"End of Round","Alive",99,"mt"]
